Add remote reset endpoint

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,6 @@ INSTALL_SUCCESS_URL=
 # Server settings
 HOST=0.0.0.0
 PORT=8080
+
+# Admin password (for POST /reset endpoint)
+ADMIN_PASSWORD=your_secure_password_here
